--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   shared_preferences: ^2.2.2
   http: ^1.1.0
   get: ^4.6.6
+  flutter_svg: ^2.0.17
+  simple_gradient_text: ^1.3.0
+  assets_audio_player: ^3.1.1
+  lottie: ^3.3.1
+  toastification: ^1.0.0
 
   shimmer: ^3.0.0
 
@@ -67,6 +72,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/images/
+    - assets/audios/
+    - assets/animations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
