--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   assets_audio_player: ^3.1.1
   lottie: ^3.3.1
   toastification: ^1.0.0
+  flutter_widget_from_html: ^0.15.3
 
   shimmer: ^3.0.0
 
